# mortgage-planning

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
components/: charts.py  inputs.py  tables.py
data/: historical_rates.json
data/examples/: aggressive_payoff.json  arm_comparison.json  first_time_buyer.json  refinance_analysis.json
src/: __init__.py  arm.py  export.py  monte_carlo.py  mortgage.py  payoff.py  rates.py  refinance.py
tests/: test_arm.py  test_monte_carlo.py  test_mortgage.py  test_rates.py  test_refinance.py
